feat: Added Paimon, Gliders and some characters from Fontaine. fix: Better description of reorganize mods feat: Qol, when selected character for moving mods the move button will recieve focus

--- a/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
@@ -51,6 +51,7 @@
                         HorizontalAlignment="Center"
                         Orientation="Horizontal">
                         <Button
+                            x:Name="MoveModsButton"
                             Margin="0,8,16,0"
                             Command="{x:Bind ViewModel.MoveModsFlyoutVM.MoveModsCommand}"
                             Content="Move" />
