chore(Logging): Improved logging format
fix: On character details overview, flyout autmatically focuses on text box on open.

--- a/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
@@ -19,7 +19,8 @@
                 x:Name="ModRowFlyout"
                 Closed="MoveRowFlyout_OnClosed"
                 Opening="ModRowFlyout_OnOpening"
-                Placement="RightEdgeAlignedBottom">
+                Placement="RightEdgeAlignedBottom"
+                Opened="ModRowFlyout_OnOpened">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition />
