chore: Better feedback when drag and drop fails

--- a/src/GIMI-ModManager.WinUI/Views/NotificationsPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/NotificationsPage.xaml
@@ -69,7 +69,8 @@
                             Grid.Row="1"
                             IsTextSelectionEnabled="True"
                             Style="{ThemeResource BodyTextBlockStyle}"
-                            Text="{x:Bind Message}" />
+                            Text="{x:Bind Message}"
+                            TextWrapping="WrapWholeWords" />
                         <TextBlock
                             Grid.Row="2"
                             HorizontalTextAlignment="Right"
